Fix customer required fields (#39)
It is now possible to fill in all customer-required fields. This is to unblock the other PR, tests will follow.

--- a/clients/admin/src/locales/en.json
+++ b/clients/admin/src/locales/en.json
@@ -21,7 +21,35 @@
       "nav": "Customers",
       "add" : {
         "title": "Add Customer",
-        "nav": "Add Customer"
+        "nav": "Add Customer",
+        "internalInformation": "Internal Information",
+        "displayName": "Display Name",
+        "error" : {
+          "displayNameRequired": "The display name is required",
+          "displayNameMinLength": "The display name should be at least 6 characters",
+          "displayNameChecking": "Checking display name availability..",
+          "displayNameTaken": "This display name is already taken"
+        },
+        "note": "About",
+        "description": {
+          "note": "Brief description of the customer esp. why is he buying from us.",
+          "internalInformation": "This section is for us, fill in how we call the customer, what we know etc.",
+          "legalInformation": "Use the legal information that can be used e.g. for billing.",
+          "contactInformation": "Use a permanent address where you can receive mail."
+        },
+        "placeholder": {
+          "note": "They are very interested in..."
+        },
+        "legalInformation": "Legal Information",
+        "legalName": "Legal Name",
+        "idNumber": "ID Number",
+        "vatNumber": "VAT Number",
+        "country": "Country",
+        "line1": "Street address",
+        "city": "City",
+        "zip": "ZIP / Postal Code",
+        "contactInformation": "Customer Contact Information",
+        "invoicingEmailAddress": "Invoicing Email Address"
       },
       "edit" : {
         "title": "Edit Customer",
@@ -101,7 +129,7 @@
         "displayName": "Display Name",
         "isoCode": "ISO Code"
       }
-    }  
+    }
   },
   "menu" : {
     "ERPStandard": "ERP Standard",
