--- a/clients/admin/src/locales/en.json
+++ b/clients/admin/src/locales/en.json
@@ -88,7 +88,8 @@
       },
       "detail": {
         "title": "Sales Invoice Detail",
-        "nav": "Sales Invoice Detail"
+        "nav": "Sales Invoice Detail",
+        "confirm": "Confirm"
       }
     },
     "products": {
