--- a/clients/admin/src/locales/en.json
+++ b/clients/admin/src/locales/en.json
@@ -121,7 +121,21 @@
       "nav": "Organizations",
       "add": {
         "title": "Add Organization",
-        "nav": "Add Organization"
+        "nav": "Add Organization",
+        "internalInformation": "Internal Information",
+        "legalInformation": "Legal Information",
+        "bankAccountInformation": "Bank Account Information",
+        "bank": "Bank",
+        "accountingInformation": "Accounting Information",
+        "contactInformation": "Contact Information",
+
+        "description": {
+          "internalInformation": "The information we use internally",
+          "legalInformation": "The legal information that will be e.g. on an invoice",
+          "bankAccountInformation": "Where the invoices should be paid to",
+          "accountingInformation": "How will we do the accounting",
+          "contactInformation": "What our contact information will be printed on an invoice"
+        }
       },
       "edit": {
         "title": "Edit Organization",
@@ -207,5 +221,9 @@
     "loading": "Loading...",
     "error": "Error",
     "refresh": "Refreshing..."
+  },
+  "validator":{
+    "required": "Required",
+    "minCharacters": "At least {min} characters"
   }
 }
