--- a/clients/admin/src/locales/en.json
+++ b/clients/admin/src/locales/en.json
@@ -125,9 +125,26 @@
         "internalInformation": "Internal Information",
         "legalInformation": "Legal Information",
         "bankAccountInformation": "Bank Account Information",
+        "country": "Country",
         "bank": "Bank",
         "accountingInformation": "Accounting Information",
         "contactInformation": "Contact Information",
+        "displayName": "Display Name",
+        "legalName": "Legal Name",
+        "registration": "Registration",
+        "idNumber": "ID Number",
+        "vatNumber": "VAT Number",
+        "line1": "Street",
+        "city": "City",
+        "zipCode": "ZIP Code",
+        "bankAccountDisplayName": "Bank Account Display Name",
+        "bankAccountCustomerPrintableNumber": "Bank Account Customer Printable Number",
+        "iban": "IBAN",
+        "swift": "SWIFT",
+        "accountingSchemes": "Accounting Scheme",
+        "currentInvoiceDocumentNumber": "Current Invoice Document Number",
+        "contact": "Contact",
+        "save": "Save",
 
         "description": {
           "internalInformation": "The information we use internally",
