--- a/clients/admin/src/locales/en.json
+++ b/clients/admin/src/locales/en.json
@@ -210,7 +210,13 @@
       "nav": "Accounting Schemes",
       "add": {
         "title": "Add Accounting Scheme",
-        "nav": "Add Accounting Scheme"
+        "nav": "Add Accounting Scheme",
+        "internalInformation": "Internal Information",
+        "currency": "Currency",
+        "displayName": "Display Name",
+        "description": {
+          "internalInformation": "Internal Information"
+        }
       },
       "edit": {
         "title": "Edit Accounting Scheme",
@@ -242,5 +248,8 @@
   "validator":{
     "required": "Required",
     "minCharacters": "At least {min} characters"
+  },
+  "actions" : {
+    "save": "Save"
   }
 }
