Issue 66 introduce storybook (#68)
Adding storybook & localazy, removing some duplicated code, fixing code thanks to the storybook, adding tests.
This should be a base for a new PR that will show how to add basic CRUD screens.

Added storybook based on https://github.com/rodgco/svelte-template. Please note there are currently some drawbacks:

?. cannot be used in the HTML part of a component; recent changes at least allow it to be use in the <script> part
looks like JavaScript is actually used in the stories
fragments do not work correctly in our mocking scenario (tests + storybook), might be related to Mike-Gibson/mock-apollo-client#24

--- a/clients/admin/src/locales/en.json
+++ b/clients/admin/src/locales/en.json
@@ -208,9 +208,20 @@
     "accountingSchemes": {
       "title": "Accounting Schemes",
       "nav": "Accounting Schemes",
+      "list": {
+        "column1": {
+          "title": "Accounting Scheme"
+        }
+      },
       "add": {
         "title": "Add Accounting Scheme",
-        "nav": "Add Accounting Scheme"
+        "nav": "Add Accounting Scheme",
+        "internalInformation": "Internal Information",
+        "currency": "Currency",
+        "displayName": "Display Name",
+        "description": {
+          "internalInformation": "Internal Information"
+        }
       },
       "edit": {
         "title": "Edit Accounting Scheme",
@@ -242,5 +253,10 @@
   "validator":{
     "required": "Required",
     "minCharacters": "At least {min} characters"
+  },
+  "actions" : {
+    "save": "Save",
+    "edit": "Edit",
+    "detail": "Detail"
   }
 }
