--- a/clients/admin/src/locales/en.json
+++ b/clients/admin/src/locales/en.json
@@ -257,6 +257,7 @@
   "actions" : {
     "save": "Save",
     "edit": "Edit",
-    "detail": "Detail"
+    "detail": "Detail",
+    "cancel": "Cancel"
   }
 }
