--- a/clients/admin/src/locales/en.json
+++ b/clients/admin/src/locales/en.json
@@ -55,6 +55,35 @@
       "edit" : {
         "title": "Edit Customer",
         "nav": "Edit Customer"
+      },
+      "detail": {
+        "statuses": {
+          "noCustomerGroup": "No Customer Group",
+          "noActivityPlanned": "No Activity Planned"
+        },
+        "internalInformation": "Internal Information",
+        "displayName": "Display Name",
+        "customerGroup": "Customer Group",
+        "note": "About",
+        "description": {
+          "note": "Brief description of the customer esp. why is he buying from us.",
+          "internalInformation": "This section is for us, fill in how we call the customer, what we know etc.",
+          "legalInformation": "Use the legal information that can be used e.g. for billing.",
+          "contactInformation": "Use a permanent address where you can receive mail."
+        },
+        "placeholder": {
+          "note": "They are very interested in..."
+        },
+        "legalInformation": "Legal Information",
+        "legalName": "Legal Name",
+        "idNumber": "ID Number",
+        "vatNumber": "VAT Number",
+        "country": "Country",
+        "line1": "Street address",
+        "city": "City",
+        "zip": "ZIP / Postal Code",
+        "contactInformation": "Customer Contact Information",
+        "invoicingEmailAddress": "Invoicing Email Address"
       }
     },
     "salesInvoices": {
@@ -307,7 +336,8 @@
   "status": {
     "loading": "Loading...",
     "error": "Error",
-    "refresh": "Refreshing..."
+    "refresh": "Refreshing...",
+    "null": "N/A"
   },
   "validator":{
     "required": "Required",
@@ -317,6 +347,7 @@
     "save": "Save",
     "edit": "Edit",
     "detail": "Detail",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "more": "More"
   }
 }
