--- a/clients/admin/src/locales/en.json
+++ b/clients/admin/src/locales/en.json
@@ -279,6 +279,71 @@
         "legalName": "Legal Name"
       }
     },
+    "factoringContracts": {
+      "title": "Factoring Contracts",
+      "nav": "Factoring Contracts",
+      "add": {
+        "title": "Add Factoring Contract",
+        "nav": "Add Factoring Contract",
+        "internalInformation": "Internal Information",
+        "legalInformation": "Legal Information",
+        "bankAccountInformation": "Bank Account Information",
+        "country": "Country",
+        "bank": "Bank",
+        "accountingInformation": "Accounting Information",
+        "contactInformation": "Contact Information",
+        "displayName": "Display Name",
+        "legalName": "Legal Name",
+        "registration": "Registration",
+        "idNumber": "ID Number",
+        "vatNumber": "VAT Number",
+        "line1": "Street",
+        "city": "City",
+        "zipCode": "ZIP Code",
+        "bankAccountDisplayName": "Bank Account Display Name",
+        "bankAccountCustomerPrintableNumber": "Bank Account Customer Printable Number",
+        "iban": "IBAN",
+        "swift": "SWIFT",
+        "accountingSchemes": "Accounting Scheme",
+        "currentInvoiceDocumentNumber": "Current Invoice Document Number",
+        "contact": "Contact",
+        "save": "Save",
+        "invoicePrintNote": "Invoice Print Note",
+        "factoringProvider": "Factoring Provider",
+        "organization": "Organization",
+        "customer": "Customer",
+
+        "description": {
+          "internalInformation": "The information we use internally",
+          "legalInformation": "The legal information that will be e.g. on an invoice",
+          "bankAccountInformation": "Where the invoices should be paid to",
+          "accountingInformation": "How will we do the accounting",
+          "contactInformation": "What our contact information will be printed on an invoice"
+        }
+      },
+      "edit": {
+        "title": "Edit Factoring Contract",
+        "nav": "Add Factoring Contract"
+      },
+      "list": {
+        "column1": {
+          "title": "Factoring Contract"
+        },
+        "column2": {
+          "title": "Parties"
+        }
+      },
+      "detail": {
+        "title": "Factoring Contract",
+        "info": "Factoring Contract General Information",
+        "displayName": "Display Name",
+        "legalName": "Legal Name",
+        "factoringProvider": "Factoring Provider",
+        "invoicePrintNote": "Invoice Print Note",
+        "customer": "Customer",
+        "organization": "Organization"
+      }
+    },
     "settings": {
       "title": "Settings",
       "nav": "Settings"
