--- a/clients/admin/src/locales/en.json
+++ b/clients/admin/src/locales/en.json
@@ -162,6 +162,10 @@
         "column1": {
           "title": "Product"
         }
+      },
+      "detail": {
+        "displayName": "Display Name",
+        "sku": "SKU (Stock Keeping Unit)"
       }
     },
     "banks": {
@@ -233,6 +237,43 @@
         "column1": {
           "title": "Organization"
         }
+      },
+      "detail": {
+        "title": "Organization Detail",
+        "statuses": {
+          "noOrganizationGroup": "No Organization Group",
+          "noActivityPlanned": "No Activity Planned"
+        },
+        "internalInformation": "Internal Information",
+        "displayName": "Display Name",
+        "organizationGroup": "Organization Group",
+        "note": "About",
+        "priceListInformation": "Product Price List Information",
+        "publicInformation": "Public Information",
+        "description": {
+          "note": "Brief description of the organization esp. why is he buying from us.",
+          "internalInformation": "This section is for us, fill in how we call the organization, what we know etc.",
+          "legalInformation": "Use the legal information that can be used e.g. for billing.",
+          "contactInformation": "Use a permanent address where you can receive mail.",
+          "priceListInformation": "Product Prices for the Organization Group",
+          "publicInformation": "Publicly available information about the organization"
+        },
+        "placeholder": {
+          "note": "They are very interested in..."
+        },
+        "legalInformation": "Legal Information",
+        "legalName": "Legal Name",
+        "idNumber": "ID Number",
+        "vatNumber": "VAT Number",
+        "country": "Country",
+        "line1": "Street address",
+        "city": "City",
+        "zip": "ZIP / Postal Code",
+        "contactInformation": "Organization Contact Information",
+        "invoicingEmailAddress": "Invoicing Email Address",
+        "www": "Web Page",
+        "publicNote": "Public Info",
+        "productPrices": "Product Prices in the Organization Group Price List"
       }
     },
     "factoringProviders": {
