some basic docs

--- a/clients/admin/src/stories/Currency.stories.mdx
+++ b/clients/admin/src/stories/Currency.stories.mdx
@@ -8,7 +8,7 @@ import Plugin from './assets/plugin.svg';
 import Repo from './assets/repo.svg';
 import StackAlt from './assets/stackalt.svg';
 
-<Meta title="Introduction" />
+<Meta title="Components/Currency/Introduction" />
 
 <style>{`
   .subheading {
@@ -110,16 +110,17 @@ import StackAlt from './assets/stackalt.svg';
     font-size: 12px;
     display: inline-block;
   }
+
+  footer {
+    font-size: xx-small; !important
+  }
 `}</style>
 
-# Welcome to EolERP Storybook
-This is the Storybook code of [EolERP](https://github.com/iDempiere-micro/erpjs/wiki), the headless serverless ERP and CRM for the cloud
-written in TypeScript running on [Node.js](https://nodejs.org/en/) and
-in a browser as an [Svelte](https://svelte.dev/) single page application.
+# Currency
 
-We use Storybook to build our components, to test them first, to communicate about them between business users, UX and developers.
+The currency entity is used to declare what monetary unit is accounting scheme, sales invoice amounts etc. in.
 
-Browse stories by navigating to them in the sidebar.
-
-## I want to quickly test by myself
-Cool! You can either use or [Quick Setup Guide](https://github.com/iDempiere-micro/erpjs/wiki/Quick-setup) or see the demo (once it is ready).
+<footer>
+This is the Storybook code of <a href="https://github.com/iDempiere-micro/erpjs/wiki">EolERP</a>, the headless serverless ERP and CRM for the cloud
+written in TypeScript running on Node.js and in a browser as an Svelte single page application.
+</footer>
