attachments select etc.

--- a/clients/admin/src/locales/en.json
+++ b/clients/admin/src/locales/en.json
@@ -520,7 +520,8 @@
       "Dashboard": "Dashboard",
       "Customers": "Customers",
       "SalesInvoices": "Sales Invoices",
-      "Settings": "List Admin"
+      "Settings": "List Admin",
+      "Attachments": "Attachments"
     }
   },
   "status": {
