--- a/clients/admin/src/locales/en.json
+++ b/clients/admin/src/locales/en.json
@@ -539,6 +539,7 @@
     "edit": "Edit",
     "detail": "Detail",
     "cancel": "Cancel",
-    "more": "More"
+    "more": "More",
+    "publish": "Publish"
   }
 }
